// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerList renders data correctly 1`] = `
<div>
  <div
    class="py-3 col-md-3"
  >
    <div
      class="card card"
    >
      <div
        class="font-weight-bold card-header"
      >
        Microsoft
      </div>
      <div
        class="list-group list-group-flush"
      >
        <div
          class="list-group-item"
        >
          <span
            class="text-muted"
          >
            #
          </span>
           
          1
        </div>
        <div
          class="list-group-item"
        >
          <span
            class="text-muted"
          >
            Location
          </span>
           
          USA
        </div>
      </div>
      <div
        class="d-flex card-body"
      >
        <button
          class="btn btn-secondary"
          type="button"
        >
          Öffnen
        </button>
      </div>
    </div>
  </div>
  <div
    class="py-3 col-md-3"
  >
    <div
      class="card card"
    >
      <div
        class="font-weight-bold card-header"
      >
        Oracle
      </div>
      <div
        class="list-group list-group-flush"
      >
        <div
          class="list-group-item"
        >
          <span
            class="text-muted"
          >
            #
          </span>
           
          2
        </div>
        <div
          class="list-group-item"
        >
          <span
            class="text-muted"
          >
            Location
          </span>
           
          USA
        </div>
      </div>
      <div
        class="d-flex card-body"
      >
        <button
          class="btn btn-secondary"
          type="button"
        >
          Öffnen
        </button>
      </div>
    </div>
  </div>
  <div
    class="py-3 col-md-3"
  >
    <div
      class="card card"
    >
      <div
        class="font-weight-bold card-header"
      >
        IBM
      </div>
      <div
        class="list-group list-group-flush"
      >
        <div
          class="list-group-item"
        >
          <span
            class="text-muted"
          >
            #
          </span>
           
          3
        </div>
        <div
          class="list-group-item"
        >
          <span
            class="text-muted"
          >
            Location
          </span>
           
          USA
        </div>
      </div>
      <div
        class="d-flex card-body"
      >
        <button
          class="btn btn-secondary"
          type="button"
        >
          Öffnen
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CustomerList renders loader 1`] = `
<div>
  <div
    class="col"
  >
    <div
      class="spinner-border"
      role="status"
    >
      <span
        class="sr-only"
      >
        Daten werden geladen...
      </span>
    </div>
  </div>
</div>
`;

exports[`CustomerList renders no data message if no data given 1`] = `
<div>
  <div
    class="col"
  >
    <div
      class="fade alert alert-info show"
      role="alert"
    >
      Keine Daten vorhanden
    </div>
  </div>
</div>
`;
